@@ -2,49 +2,50 @@ package ro.zizicu.mservice.product.services.impl;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import lombok.RequiredArgsConstructor;
 import ro.zizicu.mservice.product.data.CategoryRepository;
 import ro.zizicu.mservice.product.data.ProductRepository;
 import ro.zizicu.mservice.product.data.SupplierRepository;
-import ro.zizicu.mservice.product.dto.ProductDto;
-import ro.zizicu.mservice.product.dto.ProductDtoConverter;
+
 import ro.zizicu.mservice.product.entities.Category;
 import ro.zizicu.mservice.product.entities.Product;
 import ro.zizicu.mservice.product.entities.Supplier;
 import ro.zizicu.mservice.product.services.ProductService;
-import ro.zizicu.nwbase.service.impl.DefaultDTOService;
+import ro.zizicu.nwbase.service.impl.NamedServiceImpl;
 
 @Service
 @Slf4j
-@RequiredArgsConstructor
-public class ProductServiceImpl  extends DefaultDTOService<ProductRepository, ProductDtoConverter, Product, ProductDto, Integer>
+public class ProductServiceImpl  extends NamedServiceImpl<Product, Integer>
 		implements ProductService {
 
-	private final ProductRepository repository;
 	private final CategoryRepository categoryRepository; 
 	private final SupplierRepository supplierRepository;
+
+	public ProductServiceImpl(ProductRepository repository, CategoryRepository categoryRepository,
+			SupplierRepository supplierRepository) {
+		super(repository);
+		this.categoryRepository = categoryRepository;
+		this.supplierRepository = supplierRepository;
+	}
 
 	/** Executes a full or partial update on the product, after loading the product from the
 	 * database.
 	 */
 	@Override
 	@Transactional
-	public ProductDto update(ProductDto p) {
-		Product fromDatabase = repository.findById(p.getId()).orElseThrow();
-		if(p.getCategoryId() != null && !p.getCategoryId().equals(fromDatabase.getCategory().getId())) {
-			Category category = categoryRepository.findById(p.getCategoryId()).orElseThrow();
+	public Product update(Product p) {
+		Product fromDatabase = getRepository().findById(p.getId()).orElseThrow();
+		if(p.getCategory() != null && !p.getCategory().getId().equals(fromDatabase.getCategory().getId())) {
+			Category category = categoryRepository.findById(p.getCategory().getId()).orElseThrow();
 			fromDatabase.setCategory(category);
 		}
 
-		if(p.getSupplierId() != null && !p.getSupplierId().equals(fromDatabase.getSupplier().getId())) {
-			Supplier supplier = supplierRepository.findById(p.getSupplierId()).orElseThrow();
+		if(p.getSupplier() != null && !p.getSupplier().getId().equals(fromDatabase.getSupplier().getId())) {
+			Supplier supplier = supplierRepository.findById(p.getSupplier().getId()).orElseThrow();
 			fromDatabase.setSupplier(supplier);
 		}
 
@@ -61,30 +62,44 @@ public class ProductServiceImpl  extends DefaultDTOService<ProductRepository, Pr
 		if(p.getDiscontinued() != null)
 			fromDatabase.setDiscontinued(p.getDiscontinued());
 
-		return  p.fromEntity(repository.save(fromDatabase));
+		return transform(getRepository().save(fromDatabase));
 	}
 
 	@Override
-	public List<ProductDto> find(String name, Integer categoryId, Integer supplierId) {
+	public List<Product> find(String name, Integer categoryId, Integer supplierId) {
+		log.debug("filtering products");
 		Optional<Category> category = categoryId == null ? Optional.empty() : categoryRepository.findById(categoryId);
 		Optional<Supplier> supplier = supplierId == null ? Optional.empty() : supplierRepository.findById(supplierId);
-		return repository.find(name, category, supplier).stream().map( product -> {
-			ProductDto productDto = new ProductDto().fromEntity(product);
-			return productDto;
-		}).collect(Collectors.toList());
+		return ((ProductRepository)getRepository()).find(name, category, supplier).stream().map(this::transform).toList();
 	}
 
 	@Override
-	public ProductDto create(ProductDto productDto) {
-		Optional<Category> categoryOptional = categoryRepository.findById(productDto.getCategoryId());
-		Optional<Supplier> supplierOptional = supplierRepository.findById(productDto.getSupplierId());
-		Product product = new Product();
-		BeanUtils.copyProperties(productDto, product);
+	public Product create(Product product) {
+		Optional<Category> categoryOptional = categoryRepository.findById(product.getCategory().getId());
+		Optional<Supplier> supplierOptional = supplierRepository.findById(product.getSupplier().getId());
 		product.setCategory(categoryOptional.orElseThrow());
 		product.setSupplier(supplierOptional.orElseThrow());
-		Product persistedProduct = repository.save(product);
-		BeanUtils.copyProperties(persistedProduct, productDto);
-		return productDto;
+		Product persistedProduct = transform(getRepository().save(product));
+		return persistedProduct;
+	}
+
+	@Override
+	protected Product transform(Product fromProduct) {
+		log.trace("transforming product {}", fromProduct.getId());
+		Product toProduct = new Product();
+		toProduct.setName(fromProduct.getName());
+		Category category = new  Category();
+		category.setId(fromProduct.getCategory().getId());
+		Supplier supplier = new  Supplier();
+		supplier.setId(fromProduct.getSupplier().getId());
+		toProduct.setCategory(category);
+		toProduct.setSupplier(supplier);
+		toProduct.setQuantityPerUnit(fromProduct.getQuantityPerUnit());
+		toProduct.setDiscontinued(fromProduct.getDiscontinued());
+		toProduct.setUnitsInStock(fromProduct.getUnitsInStock());
+		toProduct.setUnitsOnOrder(fromProduct.getUnitsOnOrder());
+		toProduct.setId(fromProduct.getId());
+		return toProduct;
 	}
 
 }
